[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/dialog_plugin/Editor/Views/character_editor/portrait_container/portraits_container.gd" type="Script" id=1]
[ext_resource path="res://addons/dialog_plugin/Editor/Views/character_editor/portrait_container/editor_portrait/editor_portrait.tscn" type="PackedScene" id=3]

[node name="PortraitContainer" type="PanelContainer"]
margin_top = 34.0
margin_right = 482.0
margin_bottom = 142.0
rect_min_size = Vector2( 0, 64 )
focus_mode = 2
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
EditorPortrait_scene = ExtResource( 3 )
AddItemBtn_path = NodePath("VBoxContainer/HBoxContainer2/AddItemBtn")
FileDialog_path = NodePath("FileDialog")
Portraits = NodePath("VBoxContainer/ScrollContainer/Portraits")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 475.0
margin_bottom = 101.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_right = 468.0
margin_bottom = 70.0
size_flags_vertical = 3

[node name="Portraits" type="GridContainer" parent="VBoxContainer/ScrollContainer"]
margin_left = 234.0
margin_right = 234.0
margin_bottom = 70.0
size_flags_horizontal = 6
size_flags_vertical = 3
columns = 4

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_left = 147.0
margin_top = 74.0
margin_right = 468.0
margin_bottom = 94.0
size_flags_horizontal = 8

[node name="AddItemBtn" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_right = 135.0
margin_bottom = 20.0
text = "New Empty Portrait"

[node name="AddManyItemsBtn" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 139.0
margin_right = 321.0
margin_bottom = 20.0
text = "Create Portraits From Files"

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 475.0
margin_bottom = 137.0
rect_min_size = Vector2( 170, 59.5 )
window_title = "Open File(s)"
mode = 1
filters = PoolStringArray( "*.png;PNG Image" )

[connection signal="pressed" from="VBoxContainer/HBoxContainer2/AddItemBtn" to="." method="_on_AddItemBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/AddManyItemsBtn" to="." method="_on_AddManyItemsBtn_pressed"]
[connection signal="files_selected" from="FileDialog" to="." method="_on_FileDialog_files_selected"]
